feat: 직업 UI 상태 유지와 총기도감 분류 적용
- 겉날개 500 BTC와 금 직업 아이콘 및 직업코인 표기 적용
- 스킬 습득 후 화면과 선택 상태 유지
- 총기·파츠 종류별 도감 분류와 목록 위치 유지